Spacing fixes and breakpoint updates

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -123,7 +123,7 @@
       }
 
       @media (min-width: $breakpoint-navigation-threshold + 1) {
-        padding: $spv-intra--expanded $grid-margin-width $spv-intra--expanded $sph-intra;
+        padding: $spv-intra--expanded 2rem $spv-intra--expanded $sph-intra;
       }
 
       &:focus,
